fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -472,6 +472,10 @@ li {
   .col-sm-2 {
     width: 30%;
   }
+
+  .contact-icon {
+    margin: 0 5%;
+  }
 }
 
 @media (max-width:760px) {
